fixed issue with content being blurred on chrome

--- a/create/styles.css
+++ b/create/styles.css
@@ -91,5 +91,5 @@
     text-align: center;
     font-size: 14px;
     color: #888;
-    margin-top: 10px;
+    margin-top: 11px;
 }
